// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddEmployeeModal > snapshot > matches initial snapshot 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="modal-title"
    aria-modal="true"
    class="modal-overlay"
    role="dialog"
  >
    <div
      class="modal"
    >
      <div
        class="modal__header"
      >
        <h2
          class="modal__title"
          id="modal-title"
        >
          Add Employee
        </h2>
        <button
          aria-label="Close"
          class="modal__close"
        >
          ✕
        </button>
      </div>
      <form
        class="_form_46e4a7"
        novalidate=""
      >
        <div
          class="_row_46e4a7"
        >
          <div
            class="_field_46e4a7"
          >
            <label
              class="_label_46e4a7"
              for="firstName"
            >
              First Name
            </label>
            <input
              autocomplete="given-name"
              class="form-input"
              id="firstName"
              name="firstName"
              type="text"
              value=""
            />
          </div>
          <div
            class="_field_46e4a7"
          >
            <label
              class="_label_46e4a7"
              for="lastName"
            >
              Last Name
            </label>
            <input
              autocomplete="family-name"
              class="form-input"
              id="lastName"
              name="lastName"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="_field_46e4a7"
        >
          <label
            class="_label_46e4a7"
            for="jobTitle"
          >
            Job Title
          </label>
          <div
            class="_combobox_53f94f"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              class="form-input _trigger_53f94f"
              type="button"
            >
              <span
                class="_placeholder_53f94f"
              >
                Select job title…
              </span>
              <span
                aria-hidden="true"
                class="_chevron_53f94f"
              >
                ▾
              </span>
            </button>
          </div>
        </div>
        <div
          class="_field_46e4a7"
        >
          <label
            class="_label_46e4a7"
            for="department"
          >
            Department 
            <span
              class="_optional_46e4a7"
            >
              (optional)
            </span>
          </label>
          <div
            class="_combobox_53f94f"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              class="form-input _trigger_53f94f"
              type="button"
            >
              <span
                class="_placeholder_53f94f"
              >
                Select department…
              </span>
              <span
                aria-hidden="true"
                class="_chevron_53f94f"
              >
                ▾
              </span>
            </button>
          </div>
        </div>
        <div
          class="_row_46e4a7"
        >
          <div
            class="_field_46e4a7"
          >
            <label
              class="_label_46e4a7"
              for="country"
            >
              Country
            </label>
            <div
              class="_combobox_53f94f"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                class="form-input _trigger_53f94f"
                type="button"
              >
                <span
                  class="_placeholder_53f94f"
                >
                  Select country…
                </span>
                <span
                  aria-hidden="true"
                  class="_chevron_53f94f"
                >
                  ▾
                </span>
              </button>
            </div>
          </div>
          <div
            class="_field_46e4a7"
          >
            <label
              class="_label_46e4a7"
              for="salary"
            >
              Salary (USD)
            </label>
            <input
              class="form-input"
              id="salary"
              min="0"
              name="salary"
              step="1"
              type="number"
              value="0"
            />
          </div>
        </div>
        <div
          class="_row_46e4a7"
        >
          <div
            class="_field_46e4a7"
          >
            <label
              class="_label_46e4a7"
              for="hireDate"
            >
              Hire Date
            </label>
            <input
              class="form-input"
              id="hireDate"
              name="hireDate"
              type="date"
              value=""
            />
          </div>
          <div
            class="_field_46e4a7"
          >
            <label
              class="_label_46e4a7"
              for="employmentType"
            >
              Employment Type
            </label>
            <div
              class="_combobox_53f94f"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                class="form-input _trigger_53f94f"
                type="button"
              >
                <span
                  class="_placeholder_53f94f"
                >
                  Select type…
                </span>
                <span
                  aria-hidden="true"
                  class="_chevron_53f94f"
                >
                  ▾
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="modal__actions"
        >
          <button
            class="btn btn--secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="btn btn--primary"
            type="submit"
          >
            Add Employee
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddEmployeeModal > snapshot > matches snapshot with validation errors 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="modal-title"
    aria-modal="true"
    class="modal-overlay"
    role="dialog"
  >
    <div
      class="modal"
    >
      <div
        class="modal__header"
      >
        <h2
          class="modal__title"
          id="modal-title"
        >
          Add Employee
        </h2>
        <button
          aria-label="Close"
          class="modal__close"
        >
          ✕
        </button>
      </div>
      <form
        class="_form_46e4a7"
        novalidate=""
      >
        <div
          class="_row_46e4a7"
        >
          <div
            class="_field_46e4a7"
          >
            <label
              class="_label_46e4a7"
              for="firstName"
            >
              First Name
            </label>
            <input
              autocomplete="given-name"
              class="form-input form-input--error"
              id="firstName"
              name="firstName"
              type="text"
              value=""
            />
            <span
              class="_fieldError_46e4a7"
            >
              First name must be at least 2 characters
            </span>
          </div>
          <div
            class="_field_46e4a7"
          >
            <label
              class="_label_46e4a7"
              for="lastName"
            >
              Last Name
            </label>
            <input
              autocomplete="family-name"
              class="form-input form-input--error"
              id="lastName"
              name="lastName"
              type="text"
              value=""
            />
            <span
              class="_fieldError_46e4a7"
            >
              Last name must be at least 2 characters
            </span>
          </div>
        </div>
        <div
          class="_field_46e4a7"
        >
          <label
            class="_label_46e4a7"
            for="jobTitle"
          >
            Job Title
          </label>
          <div
            class="_combobox_53f94f"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              class="form-input _trigger_53f94f form-input--error"
              type="button"
            >
              <span
                class="_placeholder_53f94f"
              >
                Select job title…
              </span>
              <span
                aria-hidden="true"
                class="_chevron_53f94f"
              >
                ▾
              </span>
            </button>
          </div>
          <span
            class="_fieldError_46e4a7"
          >
            Job title must be at least 2 characters
          </span>
        </div>
        <div
          class="_field_46e4a7"
        >
          <label
            class="_label_46e4a7"
            for="department"
          >
            Department 
            <span
              class="_optional_46e4a7"
            >
              (optional)
            </span>
          </label>
          <div
            class="_combobox_53f94f"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              class="form-input _trigger_53f94f"
              type="button"
            >
              <span
                class="_placeholder_53f94f"
              >
                Select department…
              </span>
              <span
                aria-hidden="true"
                class="_chevron_53f94f"
              >
                ▾
              </span>
            </button>
          </div>
        </div>
        <div
          class="_row_46e4a7"
        >
          <div
            class="_field_46e4a7"
          >
            <label
              class="_label_46e4a7"
              for="country"
            >
              Country
            </label>
            <div
              class="_combobox_53f94f"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                class="form-input _trigger_53f94f form-input--error"
                type="button"
              >
                <span
                  class="_placeholder_53f94f"
                >
                  Select country…
                </span>
                <span
                  aria-hidden="true"
                  class="_chevron_53f94f"
                >
                  ▾
                </span>
              </button>
            </div>
            <span
              class="_fieldError_46e4a7"
            >
              Country must be at least 2 characters
            </span>
          </div>
          <div
            class="_field_46e4a7"
          >
            <label
              class="_label_46e4a7"
              for="salary"
            >
              Salary (USD)
            </label>
            <input
              class="form-input"
              id="salary"
              min="0"
              name="salary"
              step="1"
              type="number"
              value="0"
            />
          </div>
        </div>
        <div
          class="_row_46e4a7"
        >
          <div
            class="_field_46e4a7"
          >
            <label
              class="_label_46e4a7"
              for="hireDate"
            >
              Hire Date
            </label>
            <input
              class="form-input form-input--error"
              id="hireDate"
              name="hireDate"
              type="date"
              value=""
            />
            <span
              class="_fieldError_46e4a7"
            >
              Hire date is required
            </span>
          </div>
          <div
            class="_field_46e4a7"
          >
            <label
              class="_label_46e4a7"
              for="employmentType"
            >
              Employment Type
            </label>
            <div
              class="_combobox_53f94f"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                class="form-input _trigger_53f94f form-input--error"
                type="button"
              >
                <span
                  class="_placeholder_53f94f"
                >
                  Select type…
                </span>
                <span
                  aria-hidden="true"
                  class="_chevron_53f94f"
                >
                  ▾
                </span>
              </button>
            </div>
            <span
              class="_fieldError_46e4a7"
            >
              Employment type is required
            </span>
          </div>
        </div>
        <div
          class="modal__actions"
        >
          <button
            class="btn btn--secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="btn btn--primary"
            type="submit"
          >
            Add Employee
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddEmployeeModal – edit mode > snapshot > matches initial edit mode snapshot 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="modal-title"
    aria-modal="true"
    class="modal-overlay"
    role="dialog"
  >
    <div
      class="modal"
    >
      <div
        class="modal__header"
      >
        <h2
          class="modal__title"
          id="modal-title"
        >
          Edit Employee
        </h2>
        <button
          aria-label="Close"
          class="modal__close"
        >
          ✕
        </button>
      </div>
      <form
        class="_form_46e4a7"
        novalidate=""
      >
        <div
          class="_row_46e4a7"
        >
          <div
            class="_field_46e4a7"
          >
            <label
              class="_label_46e4a7"
              for="firstName"
            >
              First Name
            </label>
            <input
              autocomplete="given-name"
              class="form-input"
              id="firstName"
              name="firstName"
              type="text"
              value="Alice"
            />
          </div>
          <div
            class="_field_46e4a7"
          >
            <label
              class="_label_46e4a7"
              for="lastName"
            >
              Last Name
            </label>
            <input
              autocomplete="family-name"
              class="form-input"
              id="lastName"
              name="lastName"
              type="text"
              value="Johnson"
            />
          </div>
        </div>
        <div
          class="_field_46e4a7"
        >
          <label
            class="_label_46e4a7"
            for="jobTitle"
          >
            Job Title
          </label>
          <div
            class="_combobox_53f94f"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              class="form-input _trigger_53f94f"
              type="button"
            >
              <span
                class=""
              >
                Software Engineer
              </span>
              <span
                aria-hidden="true"
                class="_chevron_53f94f"
              >
                ▾
              </span>
            </button>
          </div>
        </div>
        <div
          class="_field_46e4a7"
        >
          <label
            class="_label_46e4a7"
            for="department"
          >
            Department 
            <span
              class="_optional_46e4a7"
            >
              (optional)
            </span>
          </label>
          <div
            class="_combobox_53f94f"
          >
            <button
              aria-expanded="false"
              aria-haspopup="listbox"
              class="form-input _trigger_53f94f"
              type="button"
            >
              <span
                class=""
              >
                Engineering
              </span>
              <span
                aria-hidden="true"
                class="_chevron_53f94f"
              >
                ▾
              </span>
            </button>
          </div>
        </div>
        <div
          class="_row_46e4a7"
        >
          <div
            class="_field_46e4a7"
          >
            <label
              class="_label_46e4a7"
              for="country"
            >
              Country
            </label>
            <div
              class="_combobox_53f94f"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                class="form-input _trigger_53f94f"
                type="button"
              >
                <span
                  class=""
                >
                  United States
                </span>
                <span
                  aria-hidden="true"
                  class="_chevron_53f94f"
                >
                  ▾
                </span>
              </button>
            </div>
          </div>
          <div
            class="_field_46e4a7"
          >
            <label
              class="_label_46e4a7"
              for="salary"
            >
              Salary (USD)
            </label>
            <input
              class="form-input"
              id="salary"
              min="0"
              name="salary"
              step="1"
              type="number"
              value="120000"
            />
          </div>
        </div>
        <div
          class="_row_46e4a7"
        >
          <div
            class="_field_46e4a7"
          >
            <label
              class="_label_46e4a7"
              for="hireDate"
            >
              Hire Date
            </label>
            <input
              class="form-input"
              id="hireDate"
              name="hireDate"
              type="date"
              value="2021-03-15"
            />
          </div>
          <div
            class="_field_46e4a7"
          >
            <label
              class="_label_46e4a7"
              for="employmentType"
            >
              Employment Type
            </label>
            <div
              class="_combobox_53f94f"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                class="form-input _trigger_53f94f"
                type="button"
              >
                <span
                  class=""
                >
                  Full-time
                </span>
                <span
                  aria-hidden="true"
                  class="_chevron_53f94f"
                >
                  ▾
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="modal__actions"
        >
          <button
            class="btn btn--secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="btn btn--primary"
            type="submit"
          >
            Save Changes
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
